Split the Player Panel (#13391) Cleanup
ExtendedStats.java
- attribute statsExtended: Modifier transient
- method fillExtendedStats: Fill one list newStatsExtended and add later once
- method TechCountStat.getValue: Combine boolean methods into list before counting
-method GenericUnitNameStat.getValue: for loop to stream for return value
- new interface GenericStat<T> to compress init calls

IStat.java
- method getName: Annotate Nls

StatPanel.java
- new method addListenerToGameDataChanged: Replaces call to deprecated gameData.addDataChangeListener(this)
- method setGameData: Replaced with annotation Setter
- methods getIcon: No return value used, so reworked and  renamed createImageIconIfNeeded
- attribute StatTableModel.collectData: Annotate Nullable, NonNls
- method getAlliancesToShow: Annotate return list entry Nls